objects/maps__LiveDriverAssignment__c.object
<CustomObject>
    <fields>
        <fullName>maps__EndDateTime__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__LiveAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Asset</label>
        <referenceTo>maps__LiveAsset__c</referenceTo>
        <relationshipName>DriverAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LiveDriver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Driver</label>
        <referenceTo>maps__LiveDriver__c</referenceTo>
        <relationshipName>LiveDriverAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__LiveIoTDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live IoT Device</label>
        <referenceTo>maps__LiveIoTDevice__c</referenceTo>
        <relationshipLabel>Live Driver Assignments</relationshipLabel>
        <relationshipName>LiveDriverAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__StartDateTime__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Maps Live Driver Assignment</label>
    <nameField>
        <label>Maps Live Driver Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Live Driver Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>